--- a/style/Style.css
+++ b/style/Style.css
@@ -10,12 +10,26 @@ body {
     color: #fff;
 }
 
-.container {
-    margin-left: 20px;
-    width: 80%;
+@media screen and (max-width:700px) {
+    header .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
-.container-menu {
+@media screen and(min-width: 1000px) {
+    .descrip {
+        width: 50%;
+    }
+}
+
+.container {
+    padding-left: 20px;
+    
+}
+
+header .container {
     display: flex;
     justify-content: space-between;
 }
@@ -53,7 +67,7 @@ a:hover {
 
 /*main*/
 
-.container-filme {
+main {
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)), url('../img/poderosoChefao.jpg');
 
@@ -66,6 +80,10 @@ a:hover {
     align-items: flex-start;
 
 }
+main .container {
+    
+    width: 60%;
+}
 
 .descrip {
     margin-bottom: 50px;
@@ -73,6 +91,7 @@ a:hover {
 
 .title {
     font-size: 4.0em;
+    margin-bottom: 10px;
 }
 
 /*botoes*/
@@ -93,4 +112,13 @@ a:hover {
 .bt:hover {
     background-color: #fff;
     color: rgba(255, 0, 0);
+}
+
+section .container {
+    margin: 20px 0px 20px 0px;
+}
+
+img {
+    height: 400px;
+    width: 100%;
 }
